[gd_scene load_steps=14 format=3 uid="uid://txc58o0ebkqu"]

[ext_resource type="Script" path="res://shop/shop.gd" id="1_2hejj"]
[ext_resource type="PackedScene" uid="uid://bjovamca8hg6f" path="res://dice/standard/standard_dice.tscn" id="2_6rcyl"]
[ext_resource type="PackedScene" uid="uid://dbj4j5h8b8fvl" path="res://dice/risky/risky_dice.tscn" id="3_21ukk"]
[ext_resource type="PackedScene" uid="uid://oil37hyjbm5r" path="res://dice/poison/poison_dice.tscn" id="4_8jlpe"]
[ext_resource type="Texture2D" uid="uid://bbwlsmgmy512l" path="res://art/shop/shop_background/shop_background5.png" id="5_a0ds2"]
[ext_resource type="Script" path="res://start_menu/exit.gd" id="7_dp6nl"]
[ext_resource type="Texture2D" uid="uid://ckyrfb38ein7f" path="res://art/button.png" id="8_4nuq1"]
[ext_resource type="AudioStream" uid="uid://b81skn0wrv7ms" path="res://music/05 Bustling Town LOOP.wav" id="9_kabqh"]

[sub_resource type="SystemFont" id="SystemFont_pyajt"]
subpixel_positioning = 0

[sub_resource type="Animation" id="Animation_suhwe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExitTexture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.5, 2.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Exit:theme_override_font_sizes/font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [25]
}

[sub_resource type="Animation" id="Animation_hb7e2"]
resource_name = "big_exit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExitTexture:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.5, 2.5), Vector2(2.75, 2.75)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Exit:theme_override_font_sizes/font_size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [25, 28]
}

[sub_resource type="Animation" id="Animation_j7ow5"]
resource_name = "small_exit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExitTexture:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.75, 2.75), Vector2(2.5, 2.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Exit:theme_override_font_sizes/font_size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [28, 25]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7gr3x"]
_data = {
"RESET": SubResource("Animation_suhwe"),
"big_exit": SubResource("Animation_hb7e2"),
"small_exit": SubResource("Animation_j7ow5")
}

[node name="shop" type="Node2D"]
script = ExtResource("1_2hejj")
standard_dice_template = ExtResource("2_6rcyl")
risky_dice_template = ExtResource("3_21ukk")
poison_dice_template = ExtResource("4_8jlpe")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(579.223, 322.68)
scale = Vector2(4.029, 4.029)
texture = ExtResource("5_a0ds2")

[node name="StartPosition1" type="Marker2D" parent="."]
position = Vector2(521, 358)

[node name="StartPosition2" type="Marker2D" parent="."]
position = Vector2(590, 358)

[node name="StartPosition3" type="Marker2D" parent="."]
position = Vector2(664, 359)

[node name="StartPosition4" type="Marker2D" parent="."]
position = Vector2(889, 359)

[node name="StartPosition5" type="Marker2D" parent="."]
position = Vector2(972, 360)

[node name="StartPosition6" type="Marker2D" parent="."]
position = Vector2(1057, 360)

[node name="RiskyPurchaseButton" type="Button" parent="."]
offset_left = 1577.0
offset_top = 282.0
offset_right = 1620.0
offset_bottom = 326.0

[node name="StandardPurchaseButton" type="Button" parent="."]
offset_left = 1514.0
offset_top = 284.0
offset_right = 1557.0
offset_bottom = 328.0

[node name="PoisonPurchaseButton2" type="Button" parent="."]
offset_left = 1654.0
offset_top = 284.0
offset_right = 1697.0
offset_bottom = 328.0

[node name="Shop Display" type="Label" parent="."]
offset_left = 32.0
offset_top = 61.0
offset_right = 334.0
offset_bottom = 85.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 19

[node name="ExitController" type="Node2D" parent="."]
position = Vector2(1135, -219)

[node name="ExitButton" type="Button" parent="ExitController"]
modulate = Color(1, 1, 1, 0)
offset_left = 397.0
offset_top = 593.0
offset_right = 516.0
offset_bottom = 652.0
theme_override_fonts/font = SubResource("SystemFont_pyajt")
text = "Return to Map"
script = ExtResource("7_dp6nl")

[node name="ExitTexture" type="Sprite2D" parent="ExitController"]
position = Vector2(488, 623.5)
scale = Vector2(2.5, 2.5)
texture = ExtResource("8_4nuq1")

[node name="Exit" type="Label" parent="ExitController"]
offset_left = 403.0
offset_top = 602.0
offset_right = 576.0
offset_bottom = 646.0
theme_override_font_sizes/font_size = 25
text = "Return to Map"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ExitController"]
libraries = {
"": SubResource("AnimationLibrary_7gr3x")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_kabqh")
autoplay = true

[node name="PurchaseButtonContainer" type="VBoxContainer" parent="."]
offset_left = 505.0
offset_top = 417.0
offset_right = 1082.0
offset_bottom = 565.0

[connection signal="mouse_entered" from="ExitController/ExitButton" to="ExitController/ExitButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ExitController/ExitButton" to="ExitController/ExitButton" method="_on_mouse_exited"]
